Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32733

Two JSON related tests running in PS mode fail on server built with -DWITH_PROTECT_STATEMENT_MEMROOT=YES

    XMLWordPrintable

Details

    Description

      These tests are main.func_json and json.json_no_table
      Both tests fail on running similar queries that use JSON function json_contains_path().

      The test main.func_json fails on running the following statement

      PREPARE stmt FROM "select json_contains_path('{\"key1\":1}', 'oNE', '$.key2[1]') as exp";
      EXECUTE stmt;
      EXECUTE stmt; <<== Attempt to run the statement the second time results in assert hit
      

      The test json.json_no_table fails on running the following statement

      PREPARE stmt FROM "select json_contains_path('{ \"a\": tru }', 'all', '$' )";
      EXECUTE stmt;
      EXECUTE stmt; <<== Attempt to run the statement the second time results in assert hit
      

      Attachments

        Issue Links

          Activity

            People

              shulga Dmitry Shulga
              shulga Dmitry Shulga
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: